# Compiler---Finals

./: .gitignore  CMakeLists.txt  README.md
parser/: CMakeLists.txt
parser/parser/: main.c  parser.c  semantics.c  symtab.c
parser/tests/: errno1.kpl  errno10.kpl  errno2.kpl  errno3.kpl  errno4.kpl  errno5.kpl  errno9.kpl
scanner/: CMakeLists.txt
scanner/scanner/: error.c  error.h  main.c  reader.c  scanner.c  scanner.h  token.c
scanner/tests/: erout1.txt  erout2.txt  erout3.txt  erout4.txt  erout5.txt  error1.kpl  error2.kpl  error3.kpl  error4.kpl  error5.kpl
scope/tests/: ERR_DUPLICATE_IDENT.kpl  ERR_INVALID_RETURN.kpl  ERR_UNDECLARED_CONSTANT.kpl  ERR_UNDECLARED_IDENT.kpl  ERR_UNDECLARED_INT_CONSTANT.kpl  ERR_UNDECLARED_PROCEDURE.kpl  ERR_UNDECLARED_TYPE.kpl  ERR_UNDECLARED_VARIABLE.kpl  example5.kpl
typecheck/tests/: ERR_BAD_TYPE_1.kpl  ERR_BAD_TYPE_2.kpl  ERR_BAD_TYPE_3.kpl  ERR_BAD_TYPE_4.kpl  ERR_BAD_TYPE_5.kpl  ERR_BAD_TYPE_6.kpl  ERR_PARAM_INCONSISTENCY.kpl  ERR_TYPE_INCONSISTENCY.kpl
